--- a/HTMLbasics/TextFormatting.html
+++ b/HTMLbasics/TextFormatting.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <head>
+    </head>
     <body>
     <p> this is a <b> sample </b> paragraph</p>
     <p> this is a <i> sample </i> paragraph</p>
@@ -13,5 +15,11 @@
         <q>Quoted text</q>
     </span>
 </p>
+<!-- for 1 space we use &nbsp;-->
+    <P>This is a &nbsp; sample paragraph</P>
+<!-- for 2 spaces we use &ensp; -->
+    <P>This is a &ensp; sample paragraph</P> 
+<!-- for 4 spaces we use &emsp;  -->
+<P>This is a &emsp; sample paragraph</P>
 </body>
 </html>
