--- a/HTMLbasics/FormBasics.html
+++ b/HTMLbasics/FormBasics.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="icon" href = "images/logo_switchtocode.ico" type = "image/x-icon">
+    <link rel="icon" href = "images/programming.png" type = "image/x-icon">
     <title>login</title>
     <meta name="keywords" content="coding">
 </head>
