--- a/HTMLbasics/BlockVsInline.html
+++ b/HTMLbasics/BlockVsInline.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+    </head>
     <body>
         <!-- img being inline tag will display elements in the same line -->
         <img src = "../HTML/images/coding_ninjas.png" width = "20%">
